--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "sqlite3": "^5.1.7",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "pg": "^8.12.0"  <-- ADDED THIS LINE AND REMOVED sqlite3
   }
 }
